# al2023-gdal

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
dockerfiles/: Dockerfile
dockerfiles/runtimes/: go.Dockerfile
dockerfiles/x86/: Dockerfile
dockerfiles/x86/runtimes/: go.Dockerfile
scripts/: create-layer.sh  deploy-layer.py
tests/: tests.sh
