[tool.poetry]
name = "lambda-gdal"
version = "0.1.0"
description = "Deploy docker container for aws lambda gdal"
authors = ["Marcel <siegmann@eomap.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
