[tool.poetry]
name = "lambda-gdal"
version = "0.1.0"
description = "Deploy docker container for aws lambda gdal"
authors = ["Marcel <siegmann@eomap.de>"]
readme = "README.md"
packages = [
    { include = "scripts" }
]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.40.2"
click = "^8.2.1"

[tool.poetry.scripts]
deploy-layer = "scripts.deploy-layer:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
